--- a/experiments/dev_experiment/experiment.env
+++ b/experiments/dev_experiment/experiment.env
@@ -1,2 +1,2 @@
-API_KEY=7HibOkazZp5crmVQvAz7C6UDfTFBiZNl6RFHjc7U
-INVOKE_URL=https://qyauommpwf.execute-api.eu-central-1.amazonaws.com/prod
+API_KEY=VdsNZOQ6UR5I1UingrBIv2mKr8nfn6WV2Gqu1SS2
+INVOKE_URL=https://gabdaeefag.execute-api.eu-central-1.amazonaws.com/prod
