--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,14 @@
+azure-functions==1.2.0
+boto3==1.12.31
+botocore==1.15.31
 certifi==2019.11.28
 chardet==3.0.4
+docutils==0.15.2
 idna==2.9
+jmespath==0.9.5
+python-dateutil==2.8.1
 python-dotenv==0.12.0
 requests==2.23.0
+s3transfer==0.3.3
+six==1.14.0
 urllib3==1.25.8
