--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ chardet==3.0.4
 docutils==0.15.2
 idna==2.9
 jmespath==0.9.5
+psutil==5.7.0
 python-dateutil==2.8.1
 python-dotenv==0.12.0
 requests==2.23.0
