--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,11 @@ requests==2.23.0
 s3transfer==0.3.3
 six==1.14.0
 urllib3==1.25.8
+pymysql==0.9.3
+paramiko==2.7.1
+sshtunnel==0.1.5
+numpy==1.18.3
+pandas==1.0.3
+
+
+
