db schemas, fault tolarence perfected, db interface coming along

--- a/infrastructure/db_server/docker-compose.yml
+++ b/infrastructure/db_server/docker-compose.yml
@@ -5,7 +5,7 @@ volumes:
 
 services:
   mysql:
-    image: 'thomaskeralla/exp_mysql:latest'
+    image: 'faasbenchmarker/exp_mysql:latest'
     container_name: db
     environment:
       - MYSQL_ROOT_PASSWORD=faas
