--- a/cloud_functions/openfaas/faas_benchmarker_functions.yml
+++ b/cloud_functions/openfaas/faas_benchmarker_functions.yml
@@ -9,16 +9,27 @@ functions:
     image: faasbenchmarker/function1:latest
     build_options:
       - dev
-    # TODO change to project account
+    environment:
+      read_timeout: "60s"
+      write_timeout: "60s"
+      timeout_secs: "5000"
   function2:
     lang: python3
     handler: ./function2
     image: faasbenchmarker/function2:latest
     build_options:
       - dev
+    environment:
+      read_timeout: "60s"
+      write_timeout: "60s"
+      timeout_secs: "5000"
   function3:
     lang: python3
     handler: ./function3
     image: faasbenchmarker/function3:latest
     build_options:
       - dev
+    environment:
+      read_timeout: "60s"
+      write_timeout: "60s"
+      timeout_secs: "5000"
