--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,4 +22,4 @@ workflows:
           filters:
             branches:
               only:
-                - feature/dockerized_experiment_clients
+                - master
