--- a/infrastructure/db_server/docker-compose.yml
+++ b/infrastructure/db_server/docker-compose.yml
@@ -3,9 +3,6 @@ version: '3.3'
 volumes:
   mysql_data:
 
-networks:
-  internal:
-
 services:
   db:
     image: 'faasbenchmarker/exp_mysql:latest'
@@ -14,15 +11,9 @@ services:
       - MYSQL_ROOT_PASSWORD=faas
     volumes:
       - mysql_data:/var/lib/mysql
-    ports:
-      - 3306:3306
-    networks:
-      - internal
+    network_mode: host
 
   webui:
     image: 'faasbenchmarker/webui:latest'
     container_name: webui
-    ports:
-      - 7890:7890
-    networks:
-      - internal
+    network_mode: host
