webui now show experiment status

--- a/webserver/dev/Dockerfile
+++ b/webserver/dev/Dockerfile
@@ -1,5 +1,5 @@
 from mariadb:10.5
 
-COPY 21-06-2020_13-01-01-sqldump.sql /docker-entrypoint-initdb.d/init.sql
+COPY dev_dump.sql /docker-entrypoint-initdb.d/init.sql
 
 EXPOSE 3306
