--- a/webserver/dev/docker-compose.yml
+++ b/webserver/dev/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     image: 'faasbenchmarker/exp_mysql:webui_dev'
     container_name: db
     environment:
-      - MYSQL_ROOT_PASSWORD=faas
+      - MYSQL_ROOT_PASSWORD=${DB_SQL_PASS}
     network_mode: host
     # volumes:
       # - mysql_data:/var/lib/mysql
