changed db server env vars parsing slightly ..

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs:
             - "07:05:17:d4:2e:d4:f6:f5:01:cd:df:56:57:77:bf:81"
       - run:
           name: "Deploy new version"
-          command: ssh ${DB_USER}@${DB_HOSTNAME} "docker-compose pull && docker system prune -f && docker-compose up -d"
+          command: ssh ${DB_USER}@${DB_HOSTNAME} "source db.env && docker-compose pull && docker system prune -f && docker-compose up -d"
 
 
 workflows:
