--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,31 @@
-azure-functions==1.2.0
-boto3==1.12.31
-botocore==1.15.31
-certifi==2019.11.28
+aiohttp==3.6.2
+async-timeout==3.0.1
+attrs==19.3.0
+azure-functions==1.3.0
+bcrypt==3.1.7
+boto3==1.14.18
+botocore==1.17.18
+certifi==2020.6.20
+cffi==1.14.0
 chardet==3.0.4
+cryptography==2.9.2
 docutils==0.15.2
-idna==2.9
-jmespath==0.9.5
-psutil==5.7.0
-python-dateutil==2.8.1
-python-dotenv==0.12.0
-requests==2.23.0
-s3transfer==0.3.3
-six==1.14.0
-urllib3==1.25.8
-pymysql==0.9.3
+idna==2.10
+jmespath==0.10.0
+multidict==4.7.6
+numpy==1.19.0
+pandas==1.0.5
 paramiko==2.7.1
+psutil==5.7.0
+pycparser==2.20
+PyMySQL==0.9.3
+PyNaCl==1.4.0
+python-dateutil==2.8.1
+python-dotenv==0.14.0
+pytz==2020.1
+requests==2.24.0
+s3transfer==0.3.3
+six==1.15.0
 sshtunnel==0.1.5
-numpy==1.18.3
-pandas==1.0.3
-
-
-
+urllib3==1.25.9
+yarl==1.4.2
