--- a/webserver/requirements.txt
+++ b/webserver/requirements.txt
@@ -9,6 +9,7 @@ click==7.1.2
 cryptography==2.9.2
 docutils==0.15.2
 Flask==1.1.2
+Flask-SocketIO==4.3.1
 idna==2.9
 itsdangerous==1.1.0
 Jinja2==2.11.2
@@ -23,6 +24,8 @@ pyfiglet==0.8.post1
 PyMySQL==0.9.3
 PyNaCl==1.4.0
 python-dateutil==2.8.1
+python-engineio==3.13.1
+python-socketio==4.6.0
 pytz==2020.1
 requests==2.23.0
 s3transfer==0.3.3
