--- a/cloud_functions/aws_lambda/requirements.txt
+++ b/cloud_functions/aws_lambda/requirements.txt
@@ -2,6 +2,7 @@ boto3==1.12.23
 botocore==1.15.23
 docutils==0.15.2
 jmespath==0.9.5
+ntplib==0.3.4
 psutil==5.7.0
 python-dateutil==2.8.1
 s3transfer==0.3.3
