--- a/cloud_functions/aws_lambda/requirements_monolith.txt
+++ b/cloud_functions/aws_lambda/requirements_monolith.txt
@@ -1,5 +1,13 @@
-requests
-psutil
-pandas
-numpy
-arrow
+boto3==1.12.23
+botocore==1.15.23
+docutils==0.15.2
+jmespath==0.9.5
+ntplib==0.3.4
+psutil==5.7.0
+python-dateutil==2.8.1
+s3transfer==0.3.3
+six==1.14.0
+urllib3==1.25.8
+pandas==1.1.0
+numpy==1.19.1
+arrow==0.15.8
