updated openfaas to ntp time, retry potentially failing nested invocations, and now uses the of-watchdog with the python3-flask-debian template

--- a/cloud_functions/openfaas/faas_benchmarker_functions.yml
+++ b/cloud_functions/openfaas/faas_benchmarker_functions.yml
@@ -6,12 +6,9 @@ provider:
 functions:
 
   function1:
-    # lang: python3-flask-debian
-    lang: python3
+    lang: python3-flask-debian
     handler: ./function1
     image: faasbenchmarker/function1:latest
-    build_options:
-      - dev
     environment:
       read_timeout: "180s"
       write_timeout: "180s"
@@ -23,12 +20,9 @@ functions:
       com.openfaas.scale.zero: true
 
   function2:
-    # lang: python3-flask-debian
-    lang: python3
+    lang: python3-flask-debian
     handler: ./function2
     image: faasbenchmarker/function2:latest
-    build_options:
-      - dev
     environment:
       read_timeout: "180s"
       write_timeout: "180s"
@@ -40,12 +34,9 @@ functions:
       com.openfaas.scale.zero: true
 
   function3:
-    # lang: python3-flask-debian
-    lang: python3
+    lang: python3-flask-debian
     handler: ./function3
     image: faasbenchmarker/function3:latest
-    build_options:
-      - dev
     environment:
       read_timeout: "180s"
       write_timeout: "180s"
@@ -57,8 +48,7 @@ functions:
       com.openfaas.scale.zero: true
 
   monolith:
-    # lang: python3-flask-debian
-    lang: python3-debian
+    lang: python3-flask-debian
     handler: ./monolith
     image: faasbenchmarker/monolith:latest
     environment:
