--- a/requirements.txt
+++ b/requirements.txt
@@ -9,23 +9,30 @@ certifi==2020.6.20
 cffi==1.14.0
 chardet==3.0.4
 cryptography==2.9.2
+cycler==0.10.0
 docutils==0.15.2
 idna==2.10
 jmespath==0.10.0
+kiwisolver==1.2.0
+matplotlib==3.3.1
 multidict==4.7.6
 ntplib==0.3.4
 numpy==1.19.0
 pandas==1.0.5
 paramiko==2.7.1
+Pillow==7.2.0
 psutil==5.7.0
 pycparser==2.20
 PyMySQL==0.9.3
 PyNaCl==1.4.0
+pyparsing==2.4.7
 python-dateutil==2.8.1
 python-dotenv==0.14.0
 pytz==2020.1
 requests==2.24.0
 s3transfer==0.3.3
+scipy==1.5.2
+seaborn==0.10.1
 six==1.15.0
 sshtunnel==0.1.5
 urllib3==1.25.9
